Make cells have a clicker cursor and panels overflow correctly

--- a/Tasks/Tasks.css
+++ b/Tasks/Tasks.css
@@ -48,6 +48,8 @@
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 7px;
 	padding: 10px;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 /* Labels Panel */
@@ -66,6 +68,7 @@
 }
 
 .ListPanel .List .cell {
+	cursor: pointer;
 	height: 60px;
 	overflow: hidden;
 }
